# milvus-enterprise-ops

./: .gitignore  README.md  __init__.py  client.py  exceptions.py  milvus-standalone-docker-compose.yml  pyproject.toml  requirements.txt  setup.py
backup_recovery/: README.md  __init__.py  config.py  example.py  exceptions.py  mock_backend.py
backup_recovery/core/: __init__.py  local_backend.py  manager.py  milvus_backend.py  validator.py
backup_recovery/models/: __init__.py  entities.py  parameters.py
backup_recovery/utils/: __init__.py  checksum.py  compression.py  progress.py  query.py  retention.py
collection_operations/: __init__.py  entities.py  manager.py  resiliency_patterns.md  schema.py  validator.py
config/: __init__.py  default_settings.yaml  settings.py
connection_management/: README.md  __init__.py  circuit_breaker.py  connection_exceptions.py  connection_manager.py  connection_pool.py  milvus_connector.py  resiliency_patterns.md
data_insertion_operations/: __init__.py
data_management_operations/: README.md  __init__.py  data_ops_config.py  data_ops_exceptions.py  example.py
data_management_operations/core/: __init__.py  manager.py  validator.py
data_management_operations/models/: __init__.py  entities.py
data_management_operations/utils/: __init__.py  retry.py  timing.py
data_modification_operations/: __init__.py
data_query_operations/: __init__.py
examples/: README.md  collection_ops_basic_test.py  gemini_embeddings_example.py  stress_test_concurrent_collections.py  stress_test_multiple_connections.py  test_production_fixes.py  test_rate_limiting.py
index_operations/: README.md  __init__.py  config.py  example.py  index_ops_exceptions.py
milvus_infra_management/: README.md  manage_milvus_infra.py
monitoring/: __init__.py
partition_operations/: __init__.py
search_operations/: .env.example  __init__.py  example.py
search_optimization/: __init__.py
usage_examples/: README.md  config.yaml  utils.py
utils/: __init__.py  rate_limiter.py  retry_budget.py
(+66 files in other folders)
